--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,5 +1,7 @@
 services:
   backend:
-    build: ../backend
-  frontend:
-    build: ../frontend
+    build: ../backend       # Build backend Docker image
+    ports:
+      - "8000:8000"         # Expose port 8000
+    env_file:
+      - ../backend/.env     # Load environment vars
