cross-build the frontend for linux/amd64

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - ../backend/.env     # Load environment vars
 
   frontend:
+    platform: linux/amd64   # Cross-build for linux/amd64
     build:
       context: ../frontend  # Build frontend Docker image
     ports:
