--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,10 @@
 FROM python:3.13.3-slim
 
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends build-essential \
+ && pip install --upgrade pip setuptools wheel \
+ && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY requirements.txt .
@@ -7,5 +12,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+EXPOSE 8000
 
 CMD ["uvicorn", "app.chatbot:app", "--host", "0.0.0.0", "--port", "8000"]
