--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,6 +1,12 @@
 services:
   graph:
     image: langgraph-server:local
+    volumes:
+      - ../backend/langgraph.json:/app/langgraph.json:ro
+    command: >
+      uvicorn -m langgraph_server.main:app
+      --reload --host 0.0.0.0 --port 8001
+      --config /app/langgraph.json
     ports:
       - "8001:8001"         # Expose port 8001
     env_file:
