--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,11 @@ fastapi
 uvicorn
 python-dotenv
 langchain
+pydantic
+langchain
 langchain-openai
 langchain-community
+langgraph
 langgraph-sdk
 openai
 typing-extensions
