spin up langgraph container

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,13 +1,24 @@
 services:
+  langgraph:
+    build:
+      context: ../backend
+      dockerfile: Dockerfile.langgraph
+    ports:
+      - "8001:8001"
+    env_file:
+      - ../backend/.env
+  
   backend:
     build:
       context: ../backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.backend
     ports:
       - "8000:8000"         # Expose port 8000
-    depends_on: []
+    depends_on: [langgraph]
     env_file:
       - ../backend/.env     # Load environment vars
+    environment:
+      - LANGSMITH_API_URL=http://langgraph:8001
 
   frontend:
     platform: linux/amd64   # Cross-build for linux/amd64
@@ -15,5 +26,4 @@ services:
       context: ../frontend  # Build frontend Docker image
     ports:
       - "3000:3000"         # Expose port 3000
-    depends_on:
-      - backend
+    depends_on: [backend]
